# R3BRoot

./: .cmake-format  .zenodo.json  AUTHORS  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS  COPYRIGHT  CTestConfig.cmake  CTestCustom.cmake  Dart.sh  README.md  SECURITY.md  codemeta.json  conanfile.py  meta_update.py  update_codemeta.py  update_zenodo.py
alpide/: AlpideLinkDef.h  CMakeLists.txt
alpide/digi/: R3BAlpideDigitizer.cxx  R3BAlpideDigitizer.h
alpide/geo/: R3BAlpideGeometry.cxx  R3BAlpideGeometry.h
alpide/online/: R3BSingleAlpideCorrelationOnlineSpectra.cxx  R3BSingleAlpideCorrelationOnlineSpectra.h
alpide/sim/: R3BAlpide.cxx
alpide/test/: testAlpideContainerPar.cxx
califa/: CMakeLists.txt  CalifaLinkDef.h  ROOT_template_hacks.h
califa/ana/: R3BCalifaCrystalCalDataAnalysis.cxx  R3BCalifaCrystalCalDataAnalysis.h
califa/calibration/: R3BCalifaCrystalCal2Cluster.cxx  R3BCalifaCrystalCal2Cluster.h  R3BCalifaCrystalCal2CrystalCalPID.cxx  R3BCalifaCrystalCal2CrystalCalPID.h  R3BCalifaCrystalCal2TotCalPar.cxx  R3BCalifaCrystalCal2TotCalPar.h  R3BCalifaMapped2CrystalCal.cxx  R3BCalifaMapped2CrystalCal.h  R3BCalifaMapped2CrystalCalPar.cxx  R3BCalifaMapped2CrystalCalPar.h
califa/geobase/: CMakeLists.txt  create_califa_geo.C
califa/online/: R3BCalifaDemoOnlineSpectra.cxx  R3BCalifaDemoOnlineSpectra.h  R3BCalifaJulichOnlineSpectra.cxx  R3BCalifaJulichOnlineSpectra.h  R3BCalifaOnlineSpectra.cxx  R3BCalifaOnlineSpectra.h
califa/pars/: R3BCalifaClusterPar.cxx  R3BCalifaClusterPar.h  R3BCalifaContFact.cxx  R3BCalifaContFact.h  R3BCalifaCrystalCalPar.cxx  R3BCalifaCrystalCalPar.h  R3BCalifaGeometry.cxx  R3BCalifaGeometry.h  R3BCalifaMappingPar.cxx  R3BCalifaMappingPar.h  R3BCalifaTotCalPar.cxx  R3BCalifaTotCalPar.h
califa/sim/: R3BCalifa.cxx  R3BCalifa.h  R3BCalifaDigitizer.cxx  R3BCalifaDigitizer.h
califa/test/: CMakeLists.txt  testCalifaContainerPar.cxx  testCalifaSimulation.C
glad/: CMakeLists.txt  GladLinkDef.h  R3BGladMagnet.cxx  R3BGladMagnet.h
glad/geobase/: CMakeLists.txt  create_glad_geo.C
music/: CMakeLists.txt  MusicLinkDef.h
music/calibration/: R3BMusicCal2Hit.cxx  R3BMusicCal2Hit.h  R3BMusicMapped2Cal.cxx  R3BMusicMapped2Cal.h
music/online/: R3BMusicOnlineSpectra.cxx  R3BMusicOnlineSpectra.h
music/pars/: R3BMusicCalPar.cxx  R3BMusicCalPar.h  R3BMusicContFact.cxx  R3BMusicContFact.h  R3BMusicHitPar.cxx  R3BMusicHitPar.h  R3BMusicMapped2CalPar.cxx  R3BMusicMapped2CalPar.h  R3BMusicMapped2CalPar_S515.cxx  R3BMusicMapped2CalPar_S515.h
music/sim/: R3BMusic.cxx  R3BMusic.h
music/test/: CMakeLists.txt  testMusicContainerPar.cxx
mwpc/: CMakeLists.txt  MwpcLinkDef.h
mwpc/digi/: R3BMwpcDigitizer.cxx  R3BMwpcDigitizer.h
mwpc/mwpc0/: R3BMwpc0.cxx  R3BMwpc0.h  R3BMwpc0Cal2Hit.cxx  R3BMwpc0Cal2Hit.h  R3BMwpc0CalPar.cxx  R3BMwpc0CalPar.h  R3BMwpc0ContFact.cxx  R3BMwpc0ContFact.h  R3BMwpc0Mapped2Cal.cxx  R3BMwpc0Mapped2Cal.h  R3BMwpc0Mapped2CalPar.cxx  R3BMwpc0Mapped2CalPar.h
mwpc/mwpc1/: R3BMwpc1.cxx  R3BMwpc1.h  R3BMwpc1Cal2Hit.cxx  R3BMwpc1Cal2Hit.h  R3BMwpc1CalPar.cxx  R3BMwpc1CalPar.h  R3BMwpc1ContFact.cxx  R3BMwpc1ContFact.h  R3BMwpc1Mapped2Cal.cxx  R3BMwpc1Mapped2Cal.h  R3BMwpc1Mapped2CalPar.cxx  R3BMwpc1Mapped2CalPar.h
mwpc/mwpc2/: R3BMwpc2.cxx  R3BMwpc2.h  R3BMwpc2Cal2Hit.cxx  R3BMwpc2Cal2Hit.h  R3BMwpc2CalPar.cxx  R3BMwpc2CalPar.h  R3BMwpc2ContFact.cxx  R3BMwpc2ContFact.h  R3BMwpc2Mapped2Cal.cxx  R3BMwpc2Mapped2Cal.h  R3BMwpc2Mapped2CalPar.cxx  R3BMwpc2Mapped2CalPar.h
mwpc/mwpc3/: CMakeLists.txt  Mwpc3LinkDef.h  R3BMwpc3.cxx  R3BMwpc3.h  R3BMwpc3Cal2Hit.cxx  R3BMwpc3Cal2Hit.h  R3BMwpc3CalPar.cxx  R3BMwpc3CalPar.h  R3BMwpc3ContFact.cxx  R3BMwpc3ContFact.h  R3BMwpc3Mapped2Cal.cxx  R3BMwpc3Mapped2Cal.h  R3BMwpc3Mapped2CalPar.cxx  R3BMwpc3Mapped2CalPar.h
mwpc/online/: R3BMwpcCorrelationOnlineSpectra.cxx  R3BMwpcCorrelationOnlineSpectra.h  R3BMwpcOnlineSpectra.cxx  R3BMwpcOnlineSpectra.h  R3BMwpcVsMusliCorrelationOnlineSpectra.cxx  R3BMwpcVsMusliCorrelationOnlineSpectra.h
mwpc/test/: CMakeLists.txt  testMwpcContainerPar.cxx
neuland/executables/: CMakeLists.txt  neulandAna.cxx  neulandSim.cxx
neuland/test/: CMakeLists.txt  testClusteringEngine.cxx  testNeulandDigitizer.C  testNeulandMultiplicityCalorimetricPar.cxx  testNeulandReconstruction.C  testNeulandSimulation.C  testNeulandTrain.C
r3bgen/: CMakeLists.txt  R3BAsciiGenerator.cxx  R3BAsciiGenerator.h  R3BBackTracking.cxx  R3BBackTracking.h  R3BBackTrackingStorageState.cxx  R3BBackTrackingStorageState.h  R3BBeamInfo.cxx  R3BBeamInfo.h  R3BBeamProperties.cxx  R3BBeamProperties.h  R3BCALIFATestGenerator.cxx  R3BCALIFATestGenerator.h  R3BCDGenerator.cxx  R3BCDGenerator.h  R3BCosmicGenerator.cxx  R3BCosmicGenerator.h  R3BCryAsciiGenerator.cxx  R3BCryAsciiGenerator.h  R3BDistribution.h  R3BDistribution1D.cxx  R3BDistribution1D.h  R3BDistribution2D.cxx  R3BDistribution2D.h  R3BDistribution3D.cxx  R3BDistribution3D.h  R3BGammaGenerator.cxx  R3BGammaGenerator.h  R3BGenLinkDef.h  R3BINCLRootGenerator.cxx  R3BINCLRootGenerator.h  R3BIonGenerator.cxx  R3BIonGenerator.h  R3BLandGenerator.cxx  R3BLandGenerator.h  R3BParticleGenerator.cxx  R3BParticleGenerator.h  R3BParticleSelector.cxx  R3BParticleSelector.h  R3BPhaseSpaceGenerator.cxx  (+9 more)
r3bgen/test/: testR3BPhaseSpaceGeneratorIntegration.C
rpc/: CMakeLists.txt  RpcLinkDef.h
rpc/calibration/: R3BRpcCal2Hit.cxx  R3BRpcCal2Hit.h  R3BRpcCal2HitPar.cxx  R3BRpcCal2HitPar.h  R3BRpcMapped2PreCal.cxx  R3BRpcMapped2PreCal.h  R3BRpcMapped2PreCalPar.cxx  R3BRpcMapped2PreCalPar.h  R3BRpcPreCal2Cal.cxx  R3BRpcPreCal2Cal.h  R3BRpcPreCal2CalPar.cxx  R3BRpcPreCal2CalPar.h
rpc/digi/: R3BRpcDigitizer.cxx  R3BRpcDigitizer.h
rpc/online/: R3BRpcOnlineSpectra.cxx  R3BRpcOnlineSpectra.h
rpc/pars/: R3BRpcContFact.cxx  R3BRpcContFact.h  R3BRpcHitPar.cxx  R3BRpcHitPar.h  R3BRpcTotCalPar.cxx  R3BRpcTotCalPar.h
rpc/sim/: R3BRpc.cxx  R3BRpc.h
rpc/test/: testRpcContainerPar.cxx
ssd/: CMakeLists.txt  SsdLinkDef.h
ssd/calibration/: R3BAmsMapped2StripCal.cxx  (+9 more)
ssd/sim/: R3BTra.h  (+4 more)
twim/: CMakeLists.txt  TwimLinkDef.h
(+1354 files in other folders)
